[feat][dingo-calcite,dingo-exec] Upgrade Gradle to 7.3, upgrade JDK to 17, and fix interval and extract functions